--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ blockquote{
 p{
     color:#707070;
     text-indent:2em;
-    margin-left:35%;
-    margin-right:15%;
+    margin-left:45%;
+    margin-right:5%;
 }
 
 .smc{
@@ -146,14 +146,18 @@ table{
     margin-bottom:0;
 }
 
+.h2c{
+    text-align:center;
+}
+
 .figleft{
     text-align:left;
-    margin-left:35%;
+    margin-left:45%;
 }
 
 .figright{
     text-align:right;
-    margin-right:15%;
+    margin-right:5%;
 }
 
 /*mobile layout*/
@@ -161,8 +165,15 @@ table{
     body{
         background-color:#F1F1F1;
     }
-    .main{
-    
+
+    h1{
+        position:fixed;
+        background-color:white;
+        width:100%;
+        height:55px;
+        margin-top:-5%;
+        padding-top:5%;
+        z-index:100;
     }
 
     p{
@@ -181,12 +192,32 @@ table{
         font-size: 1em;
     }
 
+    .figcenter{
+        background-color:#f1f1f1;
+    }
+
     .figleft{
         text-align:center;
+        background-color:#f1f1f1;
+        margin-left:0;
     }
     
     .figright{
         text-align:center;
+        background-color:#f1f1f1;
+        margin-right:0;
+    }
+
+    .figcenter img{
+        mix-blend-mode:multiply;
+    }
+
+    .figleft img{
+        mix-blend-mode:multiply;
+    }
+    
+    .figright img{
+        mix-blend-mode:multiply;
     }
 
 }
@@ -223,12 +254,10 @@ table{
 
     .figleft{
         text-align:center;
-        margin-left:0;
     }
     
     .figright{
         text-align:center;
-        margin-right:0;
     }
     
 
