--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ body{
 }
 
 .pagenum2{
-    display:none;
+    font-family:"Courier New", Courier, monospace;
+    font-size:.75em;
+    color:#8B1313;
 }
 
 .noindent{
@@ -135,7 +137,7 @@ table{
 
 .h1{
     text-align:right;
-    color:#C97070;
+    color:#CA6060;
     font-weight:bold;
 }
 
@@ -172,7 +174,7 @@ table{
         color:#3C3A3A;
         width:100%;
         height:50px;
-        margin-top:-5%;
+        margin-top:-12%;
         padding-top:3%;
         z-index:100;
     }
@@ -288,6 +290,10 @@ table{
     .illustrations{
         margin-left:50%;
         font-size:.75em;
+    }
+
+    .pagenum2{
+        display:none;
     }
     
 
