finalized css stylesheet

--- a/style.css
+++ b/style.css
@@ -137,13 +137,13 @@ table{
 
 .h1{
     text-align:right;
-    color:#CA6060;
+    color:#B41F1F;
     font-weight:bold;
 }
 
 .h2a{
     text-align:right;
-    color:#C97070;
+    color:#B41F1F;
     font-weight:bold;
     margin-bottom:0;
 }
